--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
-    
+
 </head>
 
 <body>
@@ -36,7 +36,8 @@
                         <a class="nav-link active" aria-current="page" href="#">Services</a>
                     </li>
                     <li class="nav-item d-flex">
-                        <a class="priority-bar nav-link active" aria-current="page" href="#">Age </a><p class="mt-2"><i type="button" id="sort" class="fas fa-sort-amount-down me-5"></i></p>
+                        <a class="priority-bar nav-link active" aria-current="page" href="#">Age </a>
+                        <p class="mt-2"><i type="button" id="sort" class="fas fa-sort-amount-down me-5"></i></p>
                     </li>
                 </ul>
                 <form class="d-flex">
@@ -73,11 +74,20 @@
     </header>
     <main>
         <div class="container">
-            <h2 class="text-center fst-italic m-3">Get to know our friends!<i class="fa-solid fa-arrow-down-short-wide"></i></h2>
-            <div id="cards" class="p-5 d-flex justify-content-between flex-wrap"></div>
+            <h2 class="text-center fst-italic m-3">Get to know our friends!<i
+                    class="fa-solid fa-arrow-down-short-wide"></i></h2>
+            <div id="cards" class="mt-3 mb-3 d-flex justify-content-around flex-wrap"></div>
+        </div>
+        <div class="text-center fs-3 bg-light p-3">
+            <i class="fab social fa-facebook-square"></i>
+            <i class="fab social fa-linkedin"></i>
+            <i class="fab social fa-instagram-square"></i>
+            <i class="fab social fa-google-plus-square"></i>
+            <i class="fab social fa-twitter-square"></i>
+            <i class="fab social fa-github-square"></i>
         </div>
     </main>
-    <footer class="bg-warning mt-4">
+    <footer class="bg-warning ">
         <div class="text-center p-5 text-white">Copyright 2022 &copy; Adrian Pedziwiatr</div>
     </footer>
     <script src="script/script.js"></script>
